# biped5d

./: README.md
UI/: CMakeLists.txt  package.xml
UI/launch/: ui_start.launch
UI/script/: main.py  robot_choice.py  robot_choice.ui  robot_choice_func.py
UI/script/climbot5d/: climbot5d_joint_control.py  climbot5d_joint_control.ui  climbot5d_joint_control_func.py  climbot5d_mode_set.py  climbot5d_mode_set.ui  climbot5d_mode_set_func.py  (+3 more)
biped5d/: CMakeLists.txt  package.xml
biped5d/data/: demo_data.txt
biped5d/launch/: biped5d.launch
biped5d/msg/: descartes_point.msg  joint_point.msg
biped5d/script/: biped5d_control.py  biped5d_sent_joint_command.py  path_process.py
biped5d/src/: biped5d_command_test.cpp  biped5d_descartes_command.cpp  biped5d_descartes_feedback.cpp
canopen_communication/: CMakeLists.txt  package.xml
canopen_communication/modular/: canopen_control_init.py  modular_G100.py  modular_I100.py  modular_I85.py  modular_T100.py  modular_T85.py
canopen_communication/robot/: climbot5d.py
canopen_communication/scripts/: biped5d_control.py  climbot5d_control.py
canopen_communication/test/: Copley_T85.eds  T85_test.py  detect_torque_threshold.py  dual_modular_test.py  main_dual_modular.py
kinematics/: CML_Error.h  CML_ErrorCodes.h  CML_Settings.h  CML_Trajectory.h  CML_Utils.h  CopleyCAN.cpp  CopleyCAN.h  Interpolation.cpp  Interpolation.h  Kine.cpp  Kine.h  Matrix.cpp  Matrix.h  MyPath.cpp  MyPath.h  Robot.h  Setup.cpp  Setup.h  SpeedProcess.cpp  SpeedProcess.h
kinematics/CML/: Amp.cpp  CML_SDO.h  CMakeLists.txt  can_vector.cpp
(+1 files in other folders)
